# tiny-chat

./: Cargo.toml  README.md  chat_log.txt
src/: main.rs
src/frontend/: display.rs  formatting.rs  mod.rs  package-lock.json  package.json
src/frontend/public/: index.html
src/frontend/src/: App.tsx
src/frontend/src/components/: Chat.tsx
src/frontend/src/hooks/: useChat.ts
src/frontend/src/pages/: Chat.tsx  Home.tsx  Host.tsx
src/server/: broadcast.rs  chat.rs  client.rs  logger.rs  mod.rs  server.rs  ws_server.rs
