[package]
name = "tiny_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["__rustls-tls"] }
tungstenite = { version = "0.20.1", features = ["__rustls-tls"] }
tokio-rustls = "0.25"
rustls = "0.21"
futures = "0.3"
clap = { version = "4.1", features = ["derive"] }
anyhow = "1.0"

[[bin]]
name = "server"
path = "src/main.rs"
