[package]
name = "tiny_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["__rustls-tls"] }
tungstenite = { version = "0.20.1", features = ["__rustls-tls"] }
tokio-rustls = "0.25"
rustls = "0.21"
futures = "0.3"
clap = { version = "4.1", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0.142"
futures-util = "0.3.31"
url = "2.5.7"
serde = { version = "1.0.226", features = ["derive"] }
rand = "0.9.2"

[[bin]]
name = "server"
path = "src/main.rs"
